# registro-de-incidencias-videovigilancia-callao

./: .dockerignore  .editorconfig  .env  .gitignore  Dockerfile  README.md  astro.config.ts  docker-compose-devservices.yaml  nginx.conf  package.json  pyproject.toml  tsconfig.json
docs/: instructions.md  proy.typ
scripts/: convert_notebooks.py
src/: content.config.ts  env.d.ts  styles.css
src/content/docs/: index.mdx
src/content/docs/etl/: carga.ipynb  extraccion.ipynb  transformacion.ipynb
src/core/components/molecules/: Head.astro
src/core/scripts/: setup-pwa.ts  setup-site-search.ts
src/registro_de_incidencias/: database.py  folder.py  geojson.py  model.py
src/registro_de_incidencias/migrations/: 0001_initial.py
src/registro_de_indicencias/: configuration.py  database.py  folder.py
src/registro_de_indicencias/migrations/: 0001_initial.py
