[project]
name = "registro-incidencias-videovigilancia-callao"
version = "0.1.0"
description = "Registro de incidencias de videovigilancia en el Callao"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "curl-cffi==0.15.0",
    "matplotlib==3.11.0",
    "pandas==3.0.3",
    "tabulate==0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/registro_de_indicencias"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["ipykernel==7.3.0"]

[tool.ruff]
indent-width = 4
line-length = 80
extend-include = ["*.ipynb"]
unsafe-fixes = true

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = ["A004", "ANN202", "COM812", "D203", "D213", "E501", "INP001"]


[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["T20"]
